# run

./: Cargo.toml  package-lock.json  package.json
static/: index.html
